@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.666 2006/07/28 20:48:44 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.667 2006/07/29 15:58:28 agaffney Exp $
+
+  29 Jul 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIArchitectureTemplate.py:
+  skip blank entries/files in update_config_files()
 
   28 Jul 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
